tests/baselines/reference/cloduleWithDuplicateMember2(strict=true).errors.txt
cloduleWithDuplicateMember2.ts(2,9): error TS7032: Property 'x' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
cloduleWithDuplicateMember2.ts(2,11): error TS7006: Parameter 'y' implicitly has an 'any' type.
cloduleWithDuplicateMember2.ts(3,16): error TS7032: Property 'y' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
cloduleWithDuplicateMember2.ts(3,18): error TS7006: Parameter 'z' implicitly has an 'any' type.
cloduleWithDuplicateMember2.ts(7,16): error TS2300: Duplicate identifier 'x'.
cloduleWithDuplicateMember2.ts(10,21): error TS2300: Duplicate identifier 'x'.


==== cloduleWithDuplicateMember2.ts (6 errors) ====
    class C {
        set x(y) { }
            ~
!!! error TS7032: Property 'x' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
              ~
!!! error TS7006: Parameter 'y' implicitly has an 'any' type.
        static set y(z) { }
                   ~
!!! error TS7032: Property 'y' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
                     ~
!!! error TS7006: Parameter 'z' implicitly has an 'any' type.
    }
    
    module C {
        export var x = 1;
                   ~
!!! error TS2300: Duplicate identifier 'x'.
    }
    module C {
        export function x() { }
                        ~
!!! error TS2300: Duplicate identifier 'x'.
    }